<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HOFC</string>
    <string name="title_accueil">Accueil</string>
    <string name="title_classement">Classement</string>
    <string name="title_calendrier">Calendrier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- String calendrier -->
    <string name="score_separator"> - </string>
    <string name="connexion_error">Merci de vérifier votre connexion</string>
    <string name="internal_error">Erreur lors de la récupération des données</string>
    <string name="timeout_error">Le serveur a mis trop de temps à répondre. Merci de réessayer plus tard.</string>
    <string name="title_activity_actus_detail">ActusDetail</string>
    <string name="title_activity_actus_diaporama">HOFC</string>
    <string name="actuality_image_description">Actuality Image</string>
    <string name="classement_header_points">Pts</string>
    <string name="classement_header_joue">J</string>
    <string name="classement_header_victoire">V</string>
    <string name="classement_header_nul">N</string>
    <string name="classement_header_defaite">D</string>
    <string name="classement_header_bp">BP</string>
    <string name="classement_header_bc">BC</string>
    <string name="classement_header_diff">Diff</string>
    <string name="header_title">HOFC</string>
    <string name="header_text">Horgues Odos Football Club</string>
    <string name="calendrier_image">Calendrier Image</string>
    <string name="diaporama_image">Image Diaporama</string>
    <string name="agenda_image">image agenda</string>
    <string name="title_agenda">Agenda</string>
    <string name="server_error">Le serveur a rencontré une erreur lors de la récupération des informations</string>
    <string name="diaporama_image_recycle">diaporama image</string>
    <string name="loading_popup">Récupération des informations...</string>
    <string name="close_popup_button">Fermer</string>
    <string name="dialog_lieu_titre">Adresse</string>
    <string name="dialog_arbitre_titre">Arbitres</string>
    <string name="journee_image">image journee</string>
    <string name="title_journee">Agenda Excellence</string>
    <string name="title_journee_equipe2">Agenda Première Division</string>
    <string name="title_journee_equipe3">Agenda Promo. 1ere Div</string>
    <string name="param_error">"Les paramètres n'ont pas été récupérés. L'écran n'est donc pas accessible."</string>

</resources>
