<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_accueil"
            android:checked="true"
            android:icon="@drawable/accueil_icon"
            android:title="@string/title_accueil"/>
        <item
            android:id="@+id/navigation_item_classement"
            android:icon="@drawable/classement_icon"
            android:title="@string/title_classement"/>
        <item
            android:id="@+id/navigation_item_calendrier"
            android:icon="@drawable/calendar_icon"
            android:title="@string/title_calendrier"/>
        <item
            android:id="@+id/navigation_item_agenda"
            android:icon="@drawable/calendar_icon"
            android:title="@string/title_agenda"/>
        <item
            android:id="@+id/navigation_item_journee"
            android:icon="@drawable/calendar_icon"
            android:title="@string/title_journee"/>
        <item
            android:id="@+id/navigation_item_journee_equipe2"
            android:icon="@drawable/calendar_icon"
            android:title="@string/title_journee_equipe2"/>
        <item
            android:id="@+id/navigation_item_journee_equipe3"
            android:icon="@drawable/calendar_icon"
            android:title="@string/title_journee_equipe3"/>
    </group>
</menu>